[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitexscan"
version = "0.1.0"
description = "Git Exposure Scanner - Security tool for detecting exposed Git repositories and sensitive files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Siddhant Bhattarai"}
]
keywords = [
    "security",
    "git",
    "scanner",
    "vulnerability",
    "audit",
    "pentesting"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "click>=8.0.0",
    "requests>=2.25.0",
    "urllib3>=1.26.0",
    "reportlab>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "jinja2>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/shiddhant/gitexscan"
Repository = "https://github.com/shiddhant/gitexscan"
Issues = "https://github.com/shiddhant/gitexscan/issues"

[project.scripts]
gitexscan = "cli.gitexscan:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "scanner_core*", "dashboard*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
